--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="/_WebsiteTrials/">Home</a></li>
-			<li><a href="/_WebsiteTrials/blog">Blog</a></li>
+			<li><a href="{{ site.basepath }}">Home</a></li>
+			<li><a href="{{ site.basepath }}/blog">Blog</a></li>
 		</ul>
 	</nav>
 	<div class="container">
